# wagtail-snippet-image

./: LICENSE  README.md  README.rst  pyproject.toml
example/example/settings/: base.py  dev.py
example/home/: models.py  tests.py
example/home/migrations/: 0003_auto_20190512_1556.py  0004_auto_20190514_1605.py
wagtail_snippet_image/: __init__.py  attributes.py  fields.py
