[tool.poetry]
name = "wagtail-snippet-image"
version = "0.1.3"
description = "Creating a snippet images on Wagtail for sharing for social media."
license = "MIT"
authors = ["acrius <acrius@mail.ru>"]

readme = 'README.rst'

repository = "https://github.com/acrius/wagtail-snippet-image"
homepage = "https://github.com/acrius/wagtail-snippet-image"

[tool.poetry.dependencies]
python = "^3.5"
django-snippet-image = "^0.1.2"
wagtail = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
